# ai-in-aec-kg

./: .env.example  .gitignore  AI_in_AEC_2026_Snapsight_Summaries.txt  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py  chat.py  graph.py  health.py  voice.py
backend/app/services/: agent_graph.py  agent_llm.py  agent_state.py  agent_tools.py  chat.py  embeddings.py  graphrag.py  neo4j_queries.py
backend/app/utils/: openrouter.py
backend/data/seed/: chunks_output.json  enrich_output.json  extract_output.json  parse_output.json  prepare_seed.py  presentations_output.json  resolve_output.json
backend/pipeline/: __main__.py  embedder.py  enrichment.py  entity_resolution.py  extractor.py  generate_detailed_summaries.py  llm_utils.py  loader.py  parser.py  presentation_extractor.py  run_pipeline.py  schema.py  seed.py
backend/tests/: test_api_integration.py  test_health.py  test_parser.py  test_schemas.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatSidebar.tsx  GraphCanvas.tsx  LeftSidebar.tsx  NodePopover.tsx  SignupModal.tsx  VoiceOrb.tsx
frontend/src/hooks/: useChat.ts  useGraphData.ts  useSession.ts  useVoice.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/stores/: appStore.ts
frontend/src/styles/: theme.ts
